src/tests/fixtures/extend_type/missingFirstArgumentType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class SomeType {
  // No fields
}

/** @gqlField */
export function greeting(
  query /* Without an arg type we can't infer the GraphQL type to extend! */,
): string {
  return "Hello world!";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_type/missingFirstArgumentType.invalid.ts:8:3 - error: Expected first argument of a `@gqlField` function to have an explicit type annotation. Grats treats the first argument the parent object of the field. Therefore Grats needs to see the type of the parent object to generate a GraphQL schema.

8   query /* Without an arg type we can't infer the GraphQL type to extend! */,
    ~~~~~
